--- a/content/projects/v2.md
+++ b/content/projects/v2.md
@@ -1,13 +1,13 @@
 ---
 date: '2016-12-01'
-title: 'Personal Website V2'
-github: 'https://github.com/bchiang7/v2'
-external: 'https://bchiang7.github.io/v2/'
+title: 'Research at UM Transportation Research Institute'
+github: 'https://www.google.com'
+external: 'https://www.google.com'
 tech:
-  - Jekyll
-  - SCSS
-  - JS
+  - Python
+  - NLP
+  - Data Mining
 showInProjects: true
 ---
 
-Second iteration of my personal website. Designed and developed with a conscious effort to avoid using any superfluous frameworks like Bootstrap.
+Information will be added here when project is available to the public.
